Change tab title to 'Yearly Averages Comparisons'

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Evaluation Scoring Dashboard</title>
+    <title>Yearly Averages Comparisons</title>
     <style>
         * {
             margin: 0;
